fixed all ingress issues

--- a/kube/recipebook-ingress.yaml
+++ b/kube/recipebook-ingress.yaml
@@ -2,20 +2,34 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: recipebook-ingress
+  namespace: default
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
 spec:
+  defaultBackend:
+    service:
+      name: recipebook-ui-service
+      port:
+        number: 80
   rules:
     - http:
         paths:
-          - path: /?(.*)
+          - path: /(api)(.*)
             pathType: Prefix
             backend:
               service:
-                name: recipebook-ui-service
+                name: recipebook-api-service
                 port:
-                  number: 80
-          - path: /api/?(.*)
+                  number: 9000
+          - path: /(swagger)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: recipebook-api-service
+                port:
+                  number: 9000
+          - path: /(v2)(.*)
             pathType: Prefix
             backend:
               service:
