--- a/ui/src/main/resources/application-demo.properties
+++ b/ui/src/main/resources/application-demo.properties
@@ -1,3 +1,3 @@
-spring.resources.static-locations=classpath:/demo/
+spring.resources.static-locations=classpath:/demo/,classpath:/static/
 server.port=8000
 #logging.level.root=DEBUG
