--- a/ui/src/main/resources/application.properties
+++ b/ui/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.resources.static-locations=classpath:/test/
+spring.resources.static-locations=classpath:/test/,classpath:/static/
 server.port=8000
 #logging.level.root=DEBUG
